--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 	<h1>How to host a website with Github ?</h1>
 
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/3jt-J4Rc__M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<footer>Created by: Jacob Hanna</footer>
 </body>
 </html>
