add more to the body

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 
 	<h1>How to host a website with Github ?</h1>
 
+	<ol>
+		<li>Open Terminal</li>
+		<li>git status</li>
+		<li>git add + file name</li>
+		<li>git commit -m "your commint"</li>
+		<li>git status</li>
+		<li>git push origin master</li>
+
+
+
+
+	</ol>
+
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/3jt-J4Rc__M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <footer>Created by: Jacob Hanna</footer>
 </body>
